force-app/main/default/objects/Opportunity/fields/Can_Renew__c.field-meta.xml
<CustomField>
    <fullName>Can_Renew__c</fullName>
    <formula>IF(
   OR(Account.Membership_Code__r.Name = &apos;CHH&apos;,
      Account.Membership_Code__r.Name = &apos;Staff Membership&apos;,
      Account.Membership_Code__r.Name = &apos;50 Year Membership&apos;, 
      Account.Membership_Code__r.Name = &apos;Press Card Holder&apos;, 
      Account.Membership_Code__r.Name = &apos;Special Membership&apos;), FALSE,
TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Renew?</label>
    <type>Checkbox</type>
</CustomField>