force-app/main/default/objects/Opportunity/fields/DDIBankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>DDIBankAccountNumber__c</fullName>
    <label>DDIBankAccountNumber</label>
    <length>10</length>
    <type>Text</type>
</CustomField>