force-app/main/default/objects/Opportunity/fields/Dealer_Ad_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Ad_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer / Ad Code</label>
    <referenceTo>Dealer_Advert__c</referenceTo>
    <relationshipLabel>Amendments / Renewals</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>