force-app/main/default/objects/Opportunity/fields/Joining_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>Joining_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added for purposes of identifying Opps where joining fee was paid or not paid, for monthly membership fee report. Filled using Lead Mapping on convert of New memberships</description>
    <label>Joining Fee Waived</label>
    <type>Checkbox</type>
</CustomField>