force-app/main/default/objects/Opportunity/fields/LeadEmail__c.field-meta.xml
<CustomField>
    <fullName>LeadEmail__c</fullName>
    <description>Used in the DDI process</description>
    <label>Lead Email</label>
    <type>Email</type>
</CustomField>