force-app/main/default/objects/Opportunity/fields/LeadMemberLastName__c.field-meta.xml
<CustomField>
    <fullName>LeadMemberLastName__c</fullName>
    <description>Used in the DDI email process</description>
    <label>LeadMemberLastName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>