force-app/main/default/objects/Opportunity/fields/LeadMemberSalutation__c.field-meta.xml
<CustomField>
    <fullName>LeadMemberSalutation__c</fullName>
    <description>Used in the DDI email process</description>
    <label>LeadMemberSalutation</label>
    <length>5</length>
    <type>Text</type>
</CustomField>