force-app/main/default/objects/Opportunity/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <formula>CASE(Account.Payment_Method2__c,
     &apos;Cash/Cheque&apos;, &apos;00140&apos;,
     &apos;Credit Card&apos;, &apos;00130&apos;,
     &apos;Direct Debit&apos;, &apos;00120&apos;,
     &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>