force-app/main/default/objects/Opportunity/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>Pulled through from Membership record for reporting purposes only</description>
    <formula>Account.Renewal_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>