force-app/main/default/objects/Opportunity/fields/Stage_Before_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Stage_Before_Deletion__c</fullName>
    <label>Stage Before Deletion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>