force-app/main/default/objects/Opportunity/fields/Status2__c.field-meta.xml
<CustomField>
    <fullName>Status2__c</fullName>
    <formula>IMAGE( 
IF( 
   TEXT(StageName) = &quot;Complete&quot;, 
   &quot;/resource/0000000000000/green_tick&quot;, 
   IF(TEXT(StageName) = &quot;Due&quot;, 
      &quot;/resource/0000000000000/calendar&quot;,
      &quot;/resource/0000000000000/red_cross&quot;
   )
) 
,&quot;Status&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>