force-app/main/default/objects/Opportunity/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(Can_Renew__c = TRUE, 
   CASE( Member_Status__c,
         &apos;1&apos;, &apos;00510&apos;,
         &apos;2&apos;, &apos;00520&apos;,
         &apos;4&apos;, &apos;00530&apos;,
         IF( Account.Membership_Code__r.Name = &apos;Online&apos;, &apos;00050&apos;,&apos;00000&apos;)),
   &apos;00540&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>