force-app/main/default/objects/Opportunity/fields/Voucher__c.field-meta.xml
<CustomField>
    <fullName>Voucher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher</label>
    <referenceTo>Voucher__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>