force-app/main/default/objects/Opportunity/recordTypes/Change.recordType-meta.xml
<RecordType>
    <fullName>Change</fullName>
    <active>true</active>
    <businessProcess>membership</businessProcess>
    <label>Change</label>
</RecordType>