force-app/main/default/objects/Opportunity/recordTypes/New_Membership.recordType-meta.xml
<RecordType>
    <fullName>New_Membership</fullName>
    <active>true</active>
    <businessProcess>membership</businessProcess>
    <label>New Membership</label>
</RecordType>