force-app/main/default/objects/Opportunity/recordTypes/Reinstatement.recordType-meta.xml
<RecordType>
    <fullName>Reinstatement</fullName>
    <active>true</active>
    <businessProcess>membership</businessProcess>
    <label>Reinstatement</label>
</RecordType>