force-app/main/default/objects/Opportunity/recordTypes/Sale.recordType-meta.xml
<RecordType>
    <fullName>Sale</fullName>
    <active>true</active>
    <businessProcess>membership</businessProcess>
    <label>Sale</label>
</RecordType>