force-app/main/default/objects/Opportunity/listViews/ClosedLastMonth.listView-meta.xml
<ListView>
    <fullName>ClosedLastMonth</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Status2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Closed Last Month</label>
</ListView>