force-app/main/default/objects/Opportunity/listViews/Default_Opportunity_Pipeline.listView-meta.xml
<ListView>
    <fullName>Default_Opportunity_Pipeline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>Renewal_Date__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Renewal_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_MONTHS:2</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Renewal</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Due</value>
    </filters>
    <label>Amendment/Renewal Pipeline</label>
</ListView>