force-app/main/default/objects/Opportunity/listViews/New_Membership_Won.listView-meta.xml
<ListView>
    <fullName>New_Membership_Won</fullName>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Dealer_Ad_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.WON</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.New_Membership</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>New Membership Won</label>
</ListView>