force-app/main/default/objects/Opportunity/listViews/Payments_Today.listView-meta.xml
<ListView>
    <fullName>Payments_Today</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>Renewal_Date__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Status2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.LAST_UPDATE</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>Payments Made Today</label>
</ListView>