force-app/main/default/objects/Opportunity/listViews/Renewals_due_tomorrow.listView-meta.xml
<ListView>
    <fullName>Renewals_due_tomorrow</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>Renewal_Date__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Renewal_Date__c</field>
        <operation>equals</operation>
        <value>TOMORROW</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Due</value>
    </filters>
    <label>Renewals due tomorrow</label>
</ListView>