force-app/main/default/objects/Opportunity/listViews/renewals_today.listView-meta.xml
<ListView>
    <fullName>renewals_today</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Renewal_Date__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Status2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Renewal_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>equals</operation>
        <value>Renewal</value>
    </filters>
    <label>Renewals today</label>
</ListView>