force-app/main/default/objects/Opportunity/listViews/Zero_cost_renewals.listView-meta.xml
<ListView>
    <fullName>Zero_cost_renewals</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Hybrid_Membership_Number__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Renewal_Date__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>equals</operation>
        <value>Renewal</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Due</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.AMOUNT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Zero cost  renewals</label>
</ListView>